Fix ccp option columns vertical alignment in Chrome

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1545,6 +1545,7 @@ output {
   #ccp-content fieldset#ccp-img-options, #ccp-content fieldset#ccp-td-options, #ccp-content fieldset#ccp-table-options {
     height: 160px; }
   #ccp-content fieldset {
+    display: block;
     position: relative;
     width: 100%;
     margin-bottom: 5px;
@@ -1562,9 +1563,16 @@ output {
     #ccp-content fieldset .ccp-options-col-3 #chk-ccp-table-include-wrapper {
       margin-left: -40px; }
 
+.ccp-options-container {
+  position: relative;
+  display: flex;
+  justify-content: space-evenly; }
+
 .ccp-options-col-1, .ccp-options-col-2, .ccp-options-col-3, .ccp-options-col-4 {
-  position: absolute;
-  top: 2px; }
+  display: block;
+  top: 2px;
+  margin: 0;
+  padding: 0; }
 
 .ccp-options-col-1 {
   left: 0;
@@ -1941,7 +1949,15 @@ figure {
   width: 390px;
   height: 100%; }
 
-#test-right * {
-  border: 1px solid magenta; }
+/* VA! Fix for Firefox displaying extra styling on Select elements on Linux. Note: the dropdown options still show with white text on black background but I can live with that. Thanks to: https://stackoverflow.com/questions/44147362/firefox-overriding-style-of-html-select-option
+But note that it's possible that I've disabled Multiprocess (about:support) on my Windows Firefox versions. That needs to be tested before I go shooting my mouth off about this on SO.
+*/
+/* VA! ALSO: about the @supports rule...
+https://developer.mozilla.org/en-US/docs/Web/CSS/@supports   */
+@supports (-moz-appearance: none) {
+  select {
+    -moz-appearance: none !important;
+    background: white url("data:image/gif;base64,R0lGODlhBgAGAKEDAFVVVX9/f9TU1CgmNyH5BAEKAAMALAAAAAAGAAYAAAIODA4hCDKWxlhNvmCnGwUAOw==") right center no-repeat !important;
+    background-position: calc(100% - 5px) center !important; } }
 
 /*# sourceMappingURL=style.css.map */
